# ConvertMCNPToG4NDL

./: .gitignore  CMakeLists.txt  ConvertMCNPtoG4NDL.cc  MCNPNewInp.txt  procgroup  runConvMCNP
include/: AngDist2DTabular.hh  AngDist2DTabularP.hh  AngDist32EqPBinP.hh  AngDist32EqualPBin.hh  AngDistIso.hh  AngDistIsoP.hh  AngDistP32EqBin.hh  AngEnDist3DTab.hh  AngEnDistKallbach.hh  AngEnDistLab3DTab.hh  AngEnDistNBody.hh  AngularDist.hh  AngularEnergyDist.hh  CSDist.hh  CSDist1DTab.hh  CSDist1DTabP.hh  CSDistYieldComp.hh  EnDepNYieldDist.hh  EnerDist1PhEner.hh  EnerDistConTab.hh  EnerDistEqPEnerBins.hh  EnerDistEvapSpec.hh  EnerDistGenEvapSpec.hh  EnerDistLevScat.hh  EnerDistMaxwellFisSpec.hh  EnerDistTabLinFunc.hh  EnerDistTabMulti.hh  EnerDistWattSpec.hh  EnergyDist.hh  NDelayConstDist.hh  NYield1DTab.hh  NYieldPolyFunc.hh  YieldDist.hh
src/: AngDist2DTabular.cc  AngDist2DTabularP.cc  AngDist32EqPBinP.cc  AngDist32EqualPBin.cc  AngDistIso.cc  AngDistIsoP.cc  AngDistP32EqBin.cc  AngEnDist3DTab.cc  AngEnDistKallbach.cc  AngEnDistLab3DTab.cc  AngEnDistNBody.cc  AngularDist.cc  AngularEnergyDist.cc  CSDist.cc  CSDist1DTab.cc  CSDist1DTabP.cc  CSDistYieldComp.cc  EnDepNYieldDist.cc  EnerDist1PhEner.cc  EnerDistConTab.cc  EnerDistEqPEnerBins.cc  EnerDistEvapSpec.cc  EnerDistGenEvapSpec.cc  EnerDistLevScat.cc  EnerDistMaxwellFisSpec.cc  EnerDistTabLinFunc.cc  EnerDistTabMulti.cc  EnerDistWattSpec.cc  EnergyDist.cc  NDelayConstDist.cc  NYield1DTab.cc  NYieldPolyFunc.cc  YieldDist.cc
